crates/swc_css_parser/tests/errors/number/plus-dot/output.stderr
error: Expected a property value
 --> $DIR/tests/errors/number/plus-dot/input.css:1:12
  |
1 | a { width: +0.; }
  |            ^^^

